# routes/swagger.js
@@ -1,8 +1,11 @@
 const express = require('express');
 const router = express.Router();
+
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 
-router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+router.use('/api-docs', swaggerUi.server);
+router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
